style.css
*{
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
}

a{
	color: #555;
}

@-webkit-keyframes fadeIO {
	0% {opacity: 0;}
	30% {opacity: 100%;}
	70% {opacity: 100%;}
	100% {opacity: 0;}
}

/* iPhone */
@media only screen and (width:320px) and (device-width:320px) and (device-height:480px) and (orientation: landscape) {
	body {
		-webkit-transform: scale(0.667);
		-webkit-transform-origin: top right;
		position: absolute;
		right: 0;
		top: 0;
		width: 480px;
	}
}
/* iPad */
@media only screen and (width:768px) and (device-width:768px) and (device-height:1024px) and (orientation: landscape) {
	body {
		-webkit-transform: scale(0.75);
		-webkit-transform-origin: top right;
		position: absolute;
		right: 0;
		top: 0;
		width: 1024px;
	}
}

body{
	margin: 0;
	font: .75em "Segoe UI", "Arial", sans-serif;
	text-align: center;
	background-position-x: center;
}

#container{
	margin: auto;
	padding: 10px;
}

/* apply absolute formatting on small screens so that there's padding on both sides of the schedule */
@media only screen and (max-width:814px){
	#container{
		position: absolute;
	}
}


#titleTitles, #schedules, #changelog{
	display: none;
}

.noHighlight{
	/*-webkit-touch-callout: none; (disables context menu on mobile? perhaps this also disables highlighting on mobile?)*/
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

#header{
	position: relative;
	margin: auto;
	width: 100%;
	max-width: 400px;
}

#title{
	display: inline;
	/*-webkit-touch-callout: initial;*/
	-webkit-user-select: initial;
	-khtml-user-select: initial;
	-moz-user-select: initial;
	-ms-user-select: initial;
	user-select: initial;
}

#leftArrow{
	float: left;
}
#rightArrow{
	float: right;
}
#leftArrow, #rightArrow{
	cursor: pointer;
	padding: 0 12px;
	font-weight: normal;
	transition: padding .2s;
	-webkit-transition: padding .2s;
}
#leftArrow:hover{
	padding: 0 20px 0 4px;
}
#rightArrow:hover{
	padding: 0 4px 0 20px;
}
#leftArrow:hover, #rightArrow:hover{
	font-weight: bold;
}

#warning{
	display:none;
}

table{
	border-collapse: collapse;
}

#schedule{
	margin: auto;
	height: 300px; /* acts like min-height */
	background-color: rgba(255,255,255,.5)
}

#schedule td{
	width: 158px;  /* 2px short to account for 2px border */
	border: 2px solid black;
	padding: 0 0 15px;
	vertical-align: top;
}

.period, .head{
	width: inherit;
	overflow: hidden;
	line-height: 110%;
}
.periodWrapper, .headWrapper{
	display: table-cell;
	width: inherit;
	border-bottom: 1px solid black;
	vertical-align: middle;
}
.periodLength{
	font-size: .8em;
}
.head{
	height: 3.25em;
	border-bottom: 2px solid black;
	font-size: 1.33em;
}
.headWrapper{
	height: inherit;
}
.headDate{
	font-size: .8em;
}
.headSchedId{
	font-size: .7em;
}

#today .periodWrapper, #today .head{
	background-color: rgba(208,208,208,.75); /* looks like #ddd on white background */
}
#today .head{
	font-weight: bold;
}

#today .now{
	background: rgba(128,128,128,.75); /* looks close to #999 on #ddd background */
}

#today.halloween .periodWrapper, #today.halloween .head{
	background-color: #f80;
}

#today.halloween .now{
	background: #222;
	color: white;
}

.long{
	font-weight: bold;
}

#schedule .lunch{
	width:100%;
	height:100%;
}
#schedule .lunch td{
	width: 80px;  /* half of day width */
	padding: 0px;
	border-width: 0;
}
#schedule .lunch td:first-child {
	border-right: 1px solid black;
}

#version{
	position: fixed;
	bottom: 0px;
	left: 0px;
	padding: 0 3px;
	border-top-right-radius: 3px;
	color: #555;
	background-color: rgba(255, 255, 255, 0.5);
}
#version a{
	text-decoration: none;
}

#options{
	box-sizing: content-box;
	-webkit-box-sizing: content-box;
	-moz-box-sizing: content-box;
	position: fixed;
	right: -50%;
	bottom: -70%;
	border-left: 1px solid gray;
	border-top: 1px solid gray;
	border-top-left-radius: 5px;
	padding: 2.5em 0 0 2.5em;
	/*width: 30px;
	height: 30px;*/
	width: 50%;
	height: 70%;
	background-color: rgba(207, 207, 207, 0.9);
	color: #333;
	transition: right .5s, bottom .5s, padding .5s, border-top-left-radius .5s;
	-webkit-transition: right .5s, bottom .5s, padding .5s border-top-left-radius .5s;
	z-index: 10;
}
#options.mobile{ /* must be before #options.expanded for expanding to apply properly */
	right: -100%;
	bottom: -100%;
	padding: 3.75em 0 0 3.75em;
	font-size: 1.2em;
	width: 100%;
	height: 100%;
}
#options.expanded{
	right: 0;
	bottom: 0;
	padding: 0;
}
#options.mobile.expanded{
	border-top-left-radius: 0;
}

#optionsTitle{
	margin: 0 0 5px;
	-webkit-transition: margin .5s;
}
.expanded #optionsTitle{
	margin-top: 30px;
}
#optionsArrow{
	position: absolute;
	left: 0;
	top: 0;
	padding: .2em .35em;
	font: 1.66em Arial;
	text-align: left;
	cursor: pointer;
}
.mobile #optionsArrow {
	font-size: 2.5em;
}

#options.mobile input[type=checkbox]{
	transform: scale(1.2);
	-webkit-transform: scale(1.2);
}
#options input[type=number], #options input[type=text]{
	border: 1px solid gray;
	background: rgba(255, 255, 255, .5);
	text-align: center;
	font-size: 1em;
}
#options input[type=number]{
	width: 2.5em;
}
#options input::-webkit-outer-spin-button, #options input::-webkit-inner-spin-button{
	display: none; /* hide spinner on number inputs in webkit browsers */
}

#optionsContent{
	margin: 0 auto;
}
#optionsContent tr{
	height: 2em;
}
#optionsContent th{
	padding: 15px 0 5px;
}
#optionsContent td:first-child{
	padding-right: 15px;
	text-align: right;
}
.tooltipIndicator{
	text-decoration: underline;
}

#repo{
	position: absolute;
	right: 0;
	bottom: 0;
	padding: 0 5px 3px 0;
}

#currentTime{
	position: absolute;
	right: 0;
	top: 0;
	padding: 7px 10px;
	border-bottom-left-radius: 5px;
	background: rgba(255,255,255,.5);
	font-size: 1.5em;
	font-weight: bold;
	/* letter-spacing: .05em; */
	color: #333;
}

#refresh{
	display: none;
	position: fixed;
	top: 0;
	right: 0;
	padding-right: 3px;
	color: #AAA;
	font-size: 2em;
	cursor: pointer;
	transition: color .25s;
	-webkit-transition: color .25s;
}
#refresh:hover{
	color: #333;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

